# outbox_pattern

./: .gitignore  Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml
app/api/: application.py  bootstrap.py  dependencies.py
app/api/payment/v1/: repository.py  routes.py  schemas.py  service.py
app/consumers/: bootstrap.py  main.py
app/consumers/payment/: __init__.py  consumer.py  errors.py  gateway.py  repository.py  schemas.py  service.py
app/core/: settings.py
app/core/database/: __init__.py  core.py
app/core/database/mixins/: __init__.py  primary_key.py  processing_state.py  timestamp.py
app/core/database/models/: __init__.py  outbox.py  payment.py
app/core/database/revisions/: env.py
app/core/database/revisions/versions/: 9631e9c18412_initial.py
app/core/decorators/: __init__.py  retry.py
app/core/messaging/: __init__.py  broker.py  metrics.py  schemas.py  topology.py
app/core/worker/: base_worker.py  task_broker.py
app/workers/: application.py  bootstrap.py  main.py
app/workers/outbox_worker/: __init__.py  publisher.py  repository.py  schemas.py  service.py  worker.py
compose/local/: .env.example  docker-compose.yml
compose/tests/: .env.example  docker-compose.yml
tests/: conftest.py  helpers.py
tests/api/: conftest.py  test_create_payment.py  test_get_payment.py
tests/consumers/: conftest.py  test_payment_consumer.py
tests/workers/: conftest.py  test_outbox_worker.py
webhook_mock/: main.py
